package com.engine.utils;

public class Vector2 extends com.badlogic.gdx.math.Vector2 {}
