@startuml
title UI system class diagram

package UI {
    abstract Element {
        - shouldRender: boolean
        - active : boolean
        - hovered : boolean
        - pressed : boolean
        ---
        # Element()
        # Element(position: Vector2, size: Vector2)
        + setPosition(position: Vector2): void
        + setSize(size: Vector2): void
        + getHovered(): boolean
        + getPressed(): boolean
        + getPosition(): Vector2
        + getSize(): Vector2
        + needsRender(): boolean
        + isActive(): boolean
        + setActive(state: boolean): void
        + update(): void
        + render(): void
        + onHovered(state: boolean): void
        + onPressed(state: boolean): void
    }
    note left of Element::shouldRender
        shouldRender is a dirtyflag to avoid rendering when element have not changed
    end note

    class MenuScene {
        - selectedElementIndex: int
        ---
        render()
        update()
        onEvent(event: Event)
    }
    note left of MenuScene::selectedElementIndex
        -1 if no element is selected (using mouse)
    end note
}

package Engine {
    abstract Scene
    package utils {
        class Vector2
        Element "1" -- "1" Vector2: position
        Element "1" -- "1" Vector2: size
    }
}

MenuScene -up-|> Scene
Element "*" -down- "1" MenuScene: elements

@enduml